# CarValuator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
deploy_artifacts/datasets/: combined_reader_20260606.csv  similarity_current.csv
deploy_artifacts/model_results/: best_model.joblib  feature_significance.csv  metrics.csv  training_report.json
scripts/: generate_thesis_design_diagrams.py  prepare-render-artifacts.ps1  prepare_cloud_model.py  refresh-similarity.ps1  scrape_mobilede_reader.py  start-carvaluator.ps1
src/carvaluator_scraper/: __init__.py  api.py  auth.py  cli.py  dataset.py  inference.py  models.py  normalize.py  rate_limit.py  similarity.py  train.py  utils.py
src/carvaluator_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/carvaluator_scraper/scrapers/: autovit.py  mobilede.py
src/carvaluator_scraper/web/: app.js  index.html  styles.css
tests/: test_history.py  test_inference_weighting.py  test_rate_limit.py
thesis/: README  thesis.aux  thesis.bbl  thesis.blg  thesis.cs.pub.ro.cls  thesis.ilg  thesis.lof  thesis.lot  thesis.nlo  thesis.nls  thesis.tex  thesis.toc  thesis_small.aux  thesis_small.bbl  thesis_small.blg  thesis_small.ilg  thesis_small.lof  thesis_small.lot  thesis_small.out  thesis_small.tex  thesis_small.toc
thesis/src/: global.tex  main.bib  main.tex
thesis/src/appendix/: index.tex  project_usage.tex
thesis/src/base/: abstract.tex  synopsis.tex
thesis/src/chapters/: application.aux  application.tex  background.aux  background.tex  case_studies.aux  case_studies.tex  (+16 more)
thesis/template/: titlepage.ro.tex
