[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carvaluator-scraper"
version = "0.1.0"
description = "Starter scrapers for used car listings from Autovit and mobile.de"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.58.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
car-scraper = "carvaluator_scraper.cli:main"
carvaluator-api = "carvaluator_scraper.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
carvaluator_scraper = ["web/*"]

[tool.setuptools.packages.find]
where = ["src"]
