[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carvaluator-scraper"
version = "0.1.0"
description = "Starter scrapers for used car listings from Autovit and mobile.de"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright==1.58.0",
  "numpy==2.4.4",
  "pandas==3.0.1",
  "scipy==1.17.1",
  "joblib==1.5.3",
  "scikit-learn==1.8.0",
  "matplotlib==3.10.8",
  "seaborn==0.13.2",
  "fastapi==0.135.2",
  "uvicorn==0.42.0",
]

[project.scripts]
car-scraper = "carvaluator_scraper.cli:main"
carvaluator-api = "carvaluator_scraper.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
carvaluator_scraper = ["web/*"]

[tool.setuptools.packages.find]
where = ["src"]
